# uav-tvc-goose

./: .gitignore  .gitmodules  README.md
docs/: weight.txt
electronics/: goose.kicad_sym
electronics-v2/: goose.kicad_sym  hall_histeresis.py
electronics-v2/flight-controller-v2/: flight-controller-v2.kicad_pcb  flight-controller-v2.kicad_pro  fp-lib-table  (+4 more)
electronics_v2/: goose.kicad_sym
flight-controller/: communication.kicad_sch  core.kicad_sch  flight-controller.kicad_pro  flight-controller.kicad_sch  power.kicad_sch
simulation-matlab/: AttitudeMeasurementFcn.m  AttitudeStateTransitionFcn.m  parameters.m  sim_script.m  simulation.slx  word.wrl  word1.wrl
simulation-params/: rotor_thrust.py  rotor_thrust_data.csv  rotor_torque.py  rotor_torque_data.csv  thrust.py
software/calibration-acc/: CMakeLists.txt
software/calibration-acc/src/: axis.cpp  axis.h  usb.cpp  utils.h  window.cpp  window.h
software/calibration-mag/: CMakeLists.txt
software/calibration-mag/src/: matrix.cpp  usb.h  utils.h  viewer.cpp  viewer.h  window.cpp  window.h
software/calibration-servo/: CMakeLists.txt
software/calibration-servo/src/: telnet.cpp  telnet.h  window.cpp  window.h
software/goose-fc/: CMakeLists.txt  acc-calib.py  controller.py  flash.sh  log-console.py  mag-calib.py  rotation-cube.py  soc-curve.py
software/goose-fc/FreeRTOS/: FreeRTOSConfig.h  freertos_exceptions.c  freertos_runtime_stats.c
software/goose-fc/HAL/: hal_callbacks.c  hal_exceptions.c  stm32f4xx_hal_conf.h  stm32f4xx_hal_it.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase.c
software/goose-fc/USB/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.cpp  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c
software/goose-fc/src/: blink.cpp  main.c  main.cpp  queue_element.h  queues.cpp  sensors.c  sensors.h  stats.cpp  usb.c  usb.h
software/goose-fc/src/communication/: communication.c  communication.cpp  communication.h  communication_bus.cpp  communication_bus.h  logger.c  logger.cpp  logger.h  message.cpp  message.h  transmitter.cpp  transmitter.h  wire_receiver.cpp  wire_transmitter.cpp  wireless_receiver.cpp  wireless_transmitter.cpp
software/goose-fc/src/control/: actuators.cpp  actuators.h  context.h  control.cpp  controller.cpp  controller.h  events.cpp  events.h  state_abort.cpp  state_abort.h  state_active.cpp  state_active.h  state_base.h  state_landing.cpp  state_landing.h  state_ready.cpp  state_ready.h  state_takeoff.cpp  state_takeoff.h  states.cpp  states.h
software/goose-fc/src/estimator/: affrls.h  altitude_estimator.cpp  altitude_estimator.h  attitude_estimator.cpp  attitude_estimator.h  battery_estimator.cpp  battery_estimator.h  ekf.h  extended_kalman_filter.h  kalman_filter.h  kf.h  matrix.h  position_estimator.cpp  position_estimator.h  quaternion.cpp  quaternion.h  state_estimator.c  state_estimator.cpp  state_estimator.h
software/goose-fc/src/hardware/: actuators.cpp  actuators.h  lights.cpp  lights.h  memory.cpp  memory.h  ramp.cpp  ramp.h
software/goose-fc/src/sensors/: bmp280.c  bmp280.cpp  bmp280.h  hcsr04.cpp  hmc5883l.cpp  hmc5883l.h  ina226.cpp  motor_velocity.cpp  mpu6050.cpp  mpu6050.h  power_stats.cpp  sensor_bus.c  sensor_bus.cpp  sensor_bus.h  sensors.c  sensors.h  vl53l0x.cpp
software/goose-fc/src/transport/: multi_queue.h  transport.cpp  transport.h
software/goose-fc/src/utils/: interval_logger.h  matrix.h  message.cpp  message.h  moving_average.h  quaternion.cpp  quaternion.h  queue_element.h  vector.cpp  vector.h
software/goose-gps/: CMakeLists.txt  file.html  resources.qrc
software/goose-gps/src/: interactive_map.cpp  interactive_map.h  window.cpp  window.h
software/goose-station/: CMakeLists.txt
software/goose-station/src/: window.cpp  window.h
software/goose-station/src/communication/: gamepad.cpp  gamepad.h  telnet.cpp  telnet.h  usb.cpp
software/goose-station/src/widgets/: form.cpp  form.h  livechart.cpp  livechart.h
software/goose-visual/: CMakeLists.txt  Doxyfile.in  README.md
software/goose-visual/qml/: Actuators.qml  Battery.qml  Logger.qml  Settings.qml  Style.qml  main.qml  qml.qrc  resources.qrc
software/goose-visual/qml/components/: Actuators.qml  Altimeter.qml  Battery.qml  Logger.qml  Scene.qml  Settings.qml  qmldir
software/goose-visual/qml/models/: rocket.mtl
software/goose-visual/qml/styles/: Style.qml  qmldir
software/goose-visual/src/: main.cpp
software/goose-visual/src/cli-interface/: escape_codes.h  printer_writer.cpp  printer_writer.h
software/goose-visual/src/communication/: comm.h  communication_base.cpp  communication_base.h  communication_usb.cpp  communication_usb.h  concurrent_queue.h  telnet.cpp  telnet.h  usb.cpp  usb.h
software/goose-visual/src/gui-interface/: actuators.cpp  actuators.h  altimeter.h  battery.cpp  battery.h  logger.h  scene.cpp  scene.h
software/goose-visual/src/interface/: altimeter.cpp  altimeter.h  battery.h  display.cpp  display.h  escape_codes.cpp  escape_codes.h  logger.cpp  logger.h  printer.cpp  printer.h  printer_writer.cpp  writer.cpp  writer.h
software/sandbox/imu-9dof/: CMakeLists.txt
software/sandbox/imu-9dof/app/inc/: FreeRTOSConfig.h  imu9dof.h  l3gd20.h  lsm303dlhc.h  stm32f4xx_hal_conf.h
software/sandbox/imu-9dof/app/inc/abstract/: bitfield.h  bitfield_r.h  bitfield_w.h  device_register.h
software/sandbox/imu-9dof/app/src/: imu9dof.cpp  main.cpp
software/sandbox/imu-9dof/toolchain/: arm-none-eabi.cmake
software/sandbox/riccati/: CMakeLists.txt
software/sandbox/riccati/include/: lqr.h  matrix.h
software/sandbox/riccati/src/: main.cpp
software/sandbox/transfer-test/: CMakeLists.txt
software/sandbox/transfer-test/src/: main.cpp
software/sandbox/usb-bidirection/: CMakeLists.txt  main.cpp
software/sandbox/usb-reader/: CMakeLists.txt
software/sandbox/usb-reader/include/: concurrent_queue.h  escape_codes.h  serial.h
software/sandbox/usb-reader/src/: main.cpp  serial.cpp
visualization/qt-test/: CMakeLists.txt
visualization/qt-test/qml/: main.qml  qml.qrc
visualization/qt-test/src/: main.cpp  myclass.cpp  myclass.h
(+90 files in other folders)
